--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ITUniversity.Tasks.Core\ITUniversity.Tasks.Core.csproj" />
   </ItemGroup>
 
