--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ITUniversity.Tasks.Core\ITUniversity.Tasks.Core.csproj" />
+    <ProjectReference Include="..\ITUniversity.AspNetCore\ITUniversity.AspNetCore.csproj" />
+    <ProjectReference Include="..\ITUniversity.Tasks.Application\ITUniversity.Tasks.Application.csproj" />
   </ItemGroup>
 
 
