--- a/ITUniversity.Tasks/ITUniversity.Tasks.Core/ITUniversity.Tasks.Core.csproj
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Core/ITUniversity.Tasks.Core.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>ITUniversity.Tasks</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ITUniversity\ITUniversity.csproj" />
+  </ItemGroup>
+
 </Project>
