Переход на хранение в базе, замена стора на репозиторий

--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ITUniversity.AspNetCore\ITUniversity.AspNetCore.csproj" />
     <ProjectReference Include="..\ITUniversity.Tasks.Application\ITUniversity.Tasks.Application.csproj" />
+    <ProjectReference Include="..\ITUniversity.Tasks.NHibernate\ITUniversity.Tasks.NHibernate.csproj" />
   </ItemGroup>
 
 
