--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/appsettings.json
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+      "ConnectionStrings": {
+      "Default": "Server=(localdb)\\MSSQLLocalDb; Database=ITUniversity; Trusted_Connection=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
